examples/invalid/rt_forbidden_text.sarif
fn main(text: Text) -> Bool {
  true
}
